# University-Assignments

./: .gitignore  Animated Website Home Page  Constructors for c++
Algorithms&DataStructures/: lab2.py  main.py
Computational Geometry(Python)/: OGKG.doc
EEPM (Excel)/: Lab1EEPM.xlsx
IT_DBMS_Python/: openapi.yaml  openapispec.yaml  read_dump.sql  setup.cfg  Некряч Звіт.docx
IT_DBMS_Python/src/openapi_server/: main.py
IT_DBMS_Python/src/openapi_server/apis/: utils.py
IT_DBMS_Python/src/openapi_server/database/: sql_alchemy.py
IT_DBMS_Python/src/openapi_server/database/crud/: database.py  table_columns.py
IT_DBMS_Python/src/openapi_server/database/models/: table.py
IT_DBMS_Python/src/openapi_server/models/: database_create_post201_response.py  database_create_post_request.py  table_schema.py
IT_DBMS_Python/tests/: conftest.py
IT_DBMS_Python/tests/test_create_table/: test_create_table.py
IT_DBMS_Python/tests/test_delete_table/: test_delete_table.py
IntroToAI(Python)/Lab4_CSP(C++)/: .gitignore  CMakeLists.txt  main.cpp
IntroToAI(Python)/Lab4_CSP(C++)/include/: CSP.h  Classes.h  Schedule.h  profile.h
IntroToAI(Python)/Lab4_CSP(C++)/src/: CSP.cpp
UnixOperatingSystems(C, Python, Bash)/: .gitignore  CMakeLists.txt
UnixOperatingSystems(C, Python, Bash)/Assignment3/: assignment_3.py  du.log.txt
UnixOperatingSystems(C, Python, Bash)/DiningPhilosophers/: main.cpp
UnixOperatingSystems(C, Python, Bash)/Lab2/: main.cpp
UnixOperatingSystems(C, Python, Bash)/Lab3/: keyboard.cpp  main.cpp
UnixOperatingSystems(C, Python, Bash)/Lab4/: main.cpp
(+749 files in other folders)
